# c-chis-system-control

./: README.md  calculate-mean.cpp  capture-frames.cpp  laser-scanning.cpp  test.cpp
lab_toturial/stage_demo/: bandicam 2019-09-04 11-27-14-141.avi  stage_demo.pptx  ~$stage_demo.pptx
lab_toturial/stage_demo/source/: CMakeLists.txt  README.md  stage_scan_src.cpp
